--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "sass": "^1.77.8",
         "sass-loader": "^14.0.0",
         "tom-select": "^2.3.1",
+        "vanilla-lazyload": "^19.1.3",
         "yarn": "^1.22.22"
     }
 }
