--- a/package.json
+++ b/package.json
@@ -23,12 +23,19 @@
     },
     "dependencies": {
         "@amcharts/amcharts5": "^5.10.1",
+        "@amcharts/amcharts5-geodata": "^5.1.4",
+        "@observablehq/plot": "^0.6.16",
         "@popperjs/core": "^2.11.8",
         "add": "^2.0.6",
         "bootstrap": "^5.3.3",
+        "d3": "^7.9.0",
+        "flag-icons": "^7.2.3",
         "sass": "^1.77.8",
         "sass-loader": "^14.0.0",
+        "simplify-js": "1",
         "tom-select": "^2.3.1",
+        "topojson": "^3.0.2",
+        "topojson-client": "3",
         "vanilla-lazyload": "^19.1.3",
         "yarn": "^1.22.22"
     }
