--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "@observablehq/plot": "^0.6.16",
         "@popperjs/core": "^2.11.8",
         "add": "^2.0.6",
+        "aos": "^3.0.0-beta.6",
         "bootstrap": "^5.3.3",
         "d3": "^7.9.0",
+        "file-loader": "^6.0.0",
         "flag-icons": "^7.2.3",
         "sass": "^1.77.8",
         "sass-loader": "^14.0.0",
