--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
         "add": "^2.0.6",
         "aos": "^3.0.0-beta.6",
         "bootstrap": "^5.3.3",
+        "copy-webpack-plugin": "^12.0.2",
         "d3": "^7.9.0",
         "file-loader": "^6.0.0",
         "flag-icons": "^7.2.3",
+        "mathjax": "^3.2.2",
         "sass": "^1.77.8",
         "sass-loader": "^14.0.0",
         "simplify-js": "1",
